crates/plotnik-tests/tests/04-emit/bytecode/anchors/exact_anchor_before_group.txt
Q = (function_declaration
  .!
  {(identifier) @n}
)
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), this child cannot appear first in `function_declaration` because a `function_declaration` begins with `"async"` or `"function"`
 --> query.ptk:1:6
  |
1 | Q = (function_declaration
  |      ^^^^^^^^^^^^^^^^^^^^
  |
help: `.!` allows no syntax-tree node in its gap, including anonymous tokens and comments. The soft anchor `.` skips those: `(function_declaration
        .
        {(identifier) @n}
      )`
